16931
```scala

~/code/scala ./build/quick/bin/scala
Welcome to Scala version 2.10.0-20120422-061223-8c95273b70 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_29).
Type in expressions to have them evaluated.
Type :help for more information.

scala> reflect.mirror.reify
<console>:8: error: macros cannot be partially applied
              reflect.mirror.reify
                             ^
error: 
     while compiling:  <console>
       current phase:  typer
     library version:  version 2.10.0-20120422-061223-8c95273b70
    compiler version:  version 2.10.0-20120422-061223-8c95273b70
  reconstructed args:  

uncaught exception during compilation: java.lang.AssertionError
java.lang.AssertionError: assertion failed: 
     while compiling:  <console>
       current phase:  namer
     library version:  version 2.10.0-20120422-061223-8c95273b70
    compiler version:  version 2.10.0-20120422-061223-8c95273b70
  reconstructed args:  

scala.reflect.`package`.mirror.reify[T]
	at scala.Predef$.assert(Predef.scala:185)
	at scala.tools.nsc.Global.assert(Global.scala:187)
	at scala.tools.nsc.typechecker.Macros$class.macroExpand(Macros.scala:997)
	at scala.tools.nsc.interpreter.ReplGlobal$$anon$1.macroExpand(ReplGlobal.scala:24)
	at scala.tools.nsc.typechecker.Typers$Typer.adapt(Typers.scala:1088)
	at scala.tools.nsc.typechecker.Typers$Typer.adapt(Typers.scala:1067)
	at scala.tools.nsc.typechecker.Typers$Typer.typed(Typers.scala:5014)
	at scala.tools.nsc.interpreter.ReplGlobal$$anon$1$$anon$2.typed(ReplGlobal.scala:29)
	at scala.tools.nsc.typechecker.Typers$Typer.typed(Typers.scala:5079)
	at scala.tools.nsc.typechecker.Typers$Typer.computeType(Typers.scala:5174)
	at scala.tools.nsc.typechecker.Namers$Namer.assignTypeToTree(Namers.scala:803)
	at scala.tools.nsc.typechecker.Namers$Namer.getSig$1(Namers.scala:1302)
	at scala.tools.nsc.typechecker.Namers$Namer.typeSig(Namers.scala:1326)
	at scala.tools.nsc.typechecker.Namers$Namer$$anonfun$monoTypeCompleter$1$$anonfun$apply$3.apply$mcV$sp(Namers.scala:702)
	at scala.tools.nsc.typechecker.Namers$Namer$$anonfun$monoTypeCompleter$1$$anonfun$apply$3.apply(Namers.scala:701)
	at scala.tools.nsc.typechecker.Namers$Namer$$anonfun$monoTypeCompleter$1$$anonfun$apply$3.apply(Namers.scala:701)
	at scala.tools.nsc.typechecker.Namers$Namer$LogTransitions.apply(Namers.scala:1355)
	at scala.tools.nsc.typechecker.Namers$Namer.scala$tools$nsc$typechecker$Namers$Namer$$logAndValidate(Namers.scala:1364)
	at scala.tools.nsc.typechecker.Namers$Namer$$anonfun$monoTypeCompleter$1.apply(Namers.scala:701)
	at scala.tools.nsc.typechecker.Namers$Namer$$anonfun$monoTypeCompleter$1.apply(Namers.scala:700)
	at scala.Function1$class.apply$mcVL$sp(Function1.scala:39)
	at scala.runtime.AbstractFunction1.apply$mcVL$sp(AbstractFunction1.scala:12)
	at scala.tools.nsc.typechecker.Namers$$anon$1.completeImpl(Namers.scala:1467)
	at scala.tools.nsc.typechecker.Namers$LockingTypeCompleter$class.complete(Namers.scala:1475)
	at scala.tools.nsc.typechecker.Namers$$anon$1.complete(Namers.scala:1465)
	at scala.reflect.internal.Symbols$Symbol.info(Symbols.scala:1170)
	at scala.reflect.internal.Symbols$Symbol.initialize(Symbols.scala:1302)
	at scala.tools.nsc.typechecker.MethodSynthesis$MethodSynth$class.addDerivedTrees(MethodSynthesis.scala:225)
	at scala.tools.nsc.typechecker.Namers$Namer.addDerivedTrees(Namers.scala:76)
	at scala.tools.nsc.typechecker.Typers$Typer$$anonfun$45.apply(Typers.scala:1709)
	at scala.tools.nsc.typechecker.Typers$Typer$$anonfun$45.apply(Typers.scala:1709)
	at scala.tools.nsc.typechecker.Typers$Typer$$anonfun$rewrappingWrapperTrees$1.apply(Typers.scala:1647)
	at scala.tools.nsc.typechecker.Typers$Typer$$anonfun$rewrappingWrapperTrees$1.apply(Typers.scala:1644)
	at scala.collection.TraversableLike$$anonfun$flatMap$1.apply(TraversableLike.scala:247)
	at scala.collection.TraversableLike$$anonfun$flatMap$1.apply(TraversableLike.scala:247)
	at scala.collection.LinearSeqOptimized$class.foreach(LinearSeqOptimized.scala:59)
	at scala.collection.immutable.List.foreach(List.scala:77)
	at scala.collection.TraversableLike$class.flatMap(TraversableLike.scala:247)
	at scala.collection.AbstractTraversable.flatMap(Traversable.scala:112)
	at scala.tools.nsc.typechecker.Typers$Typer.typedTemplate(Typers.scala:1709)
	at scala.tools.nsc.typechecker.Typers$Typer$$anonfun$44.apply(Typers.scala:1619)
	at scala.tools.nsc.typechecker.Typers$Typer$$anonfun$44.apply(Typers.scala:1619)
	at scala.tools.nsc.typechecker.Typers$Typer.typerReportAnyContextErrors(Typers.scala:501)
	at scala.tools.nsc.typechecker.Typers$Typer.typedModuleDef(Typers.scala:1618)
	at scala.tools.nsc.typechecker.Typers$Typer.typed1(Typers.scala:4646)
	at scala.tools.nsc.typechecker.Typers$Typer.typed(Typers.scala:5005)
	at scala.tools.nsc.interpreter.ReplGlobal$$anon$1$$anon$2.typed(ReplGlobal.scala:29)
	at scala.tools.nsc.typechecker.Typers$Typer.typedStat$1(Typers.scala:2527)
	at scala.tools.nsc.typechecker.Typers$Typer$$anonfun$65$$anonfun$66.apply(Typers.scala:2623)
	at scala.tools.nsc.typechecker.Typers$Typer$$anonfun$65$$anonfun$66.apply(Typers.scala:2623)
	at scala.collection.immutable.List.loop$1(List.scala:163)
	at scala.collection.immutable.List.mapConserve(List.scala:179)
	at scala.tools.nsc.typechecker.Typers$Typer$$anonfun$65.apply(Typers.scala:2623)
	at scala.tools.nsc.typechecker.Typers$Typer$$anonfun$65.apply(Typers.scala:2622)
	at scala.tools.nsc.typechecker.Typers$Typer.withSavedContext(Typers.scala:510)
	at scala.tools.nsc.typechecker.Typers$Typer.typedStats(Typers.scala:2622)
	at scala.tools.nsc.typechecker.Typers$Typer.typedTemplate(Typers.scala:1711)
	at scala.tools.nsc.typechecker.Typers$Typer$$anonfun$44.apply(Typers.scala:1619)
	at scala.tools.nsc.typechecker.Typers$Typer$$anonfun$44.apply(Typers.scala:1619)
	at scala.tools.nsc.typechecker.Typers$Typer.typerReportAnyContextErrors(Typers.scala:501)
	at scala.tools.nsc.typechecker.Typers$Typer.typedModuleDef(Typers.scala:1618)
```
